--- a/ChessEngine/ChessEngine.fsproj
+++ b/ChessEngine/ChessEngine.fsproj
@@ -37,24 +37,6 @@
     <DocumentationFile>bin\Release\ChessEngine.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <Compile Include="Piece.fs" />
-    <Compile Include="MoveContent.fs" />
-    <Compile Include="Board.fs" />
-    <Compile Include="Moves.fs" />
-    <Compile Include="ValidMoves.fs" />
-    <Compile Include="Engine.fs" />
-  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
@@ -71,6 +53,26 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
+  <ItemGroup>
+    <None Include="App.config" />
+    <Compile Include="Piece.fs" />
+    <Compile Include="MoveContent.fs" />
+    <Compile Include="Board.fs" />
+    <Compile Include="Moves.fs" />
+    <Compile Include="ValidMoves.fs" />
+    <Compile Include="Engine.fs" />
+    <Compile Include="AI.fs" />
+    <Content Include="GetterSetterSnippet.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+  </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
